<resources>
    <string name="app_name">Academic Lifestyle</string>
    <string name="nav_home">Home</string>
    <string name="nav_myclasses">My Classes</string>
    <string name="nav_ambience">Ambience</string>
    <string name="nav_mybehaviours"><![CDATA[My Behaviours & Habits]]></string>
    <string name="nav_marketplace">Study Marketplace</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_rating">Rate Us</string>
    <string name="submit_btn">Submit</string>
    <string name="log_out">Log Out</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="myclasses_warning">Make sure to set your study program, semester and year in the settings before using this module</string>
    <string name="txtSettings_first_name">First name</string>
    <string name="textEditorSettingsFistName">First Name</string>
    <string name="last_name">Last name</string>
    <string name="txtSettingsUsername">Username</string>
    <string name="txtSettingsPassword">Password</string>
    <string name="year_of_study">Year of study</string>
    <string name="study">Study</string>
    <string name="saveSettings">Save</string>
    <string name="btDesc">Make sure to turn on <font color='#01C6DB'>Bluetooth</font> for your attendance to be automatically noted!</string>
    <string name="set_default_image">SET DEFAULT IMAGE</string>
    <string name="choose_image">Choose image</string>
    <string name="tardiness">TARDINESS <font color='#818186'>(%)</font></string>
    <string name="descriptionStudyImprovments">It shows that your peak performance is when you have at least <font color='#01C6DB'>this</font> amount of oxygen in the room.</string>
    <string name="desc_logo">logo</string>
    <string name="placeholder">-</string>
    <string name="dialog_presence">Presence recorded at:</string>
    <string name="dialog_retry">Would you like to retry recording the presence?</string>
    <string name="dialog_btn">RETRY</string>
    <string name="ambience_dvoranaplaceholder">Location: FOI 1, Dvorana 10</string>
    <string name="ambience_measurement">MEASUREMENT</string>
    <string name="ambience_value">VALUE</string>
    <string name="ambience_temperature">Temperature (C):</string>
    <string name="ambience_pressure">Pressure (hPa):</string>
    <string name="ambience_moisture">Moisture (%):</string>
    <string name="ambience_airquality">AIR QUALITY</string>
    <string name="percentage">(%)</string>
    <string name="description">Description</string>
    <string name="ambience_airquality_placeholder">Looking at the overall quality of air in this room, it looks like you need some fresh air.</string>
    <string name="ambience_window">WINDOW POSITION</string>
    <string name="ambience_location">Location:</string>
    <string name="home_stats">YOUR STATS</string>
    <string name="home_course">Course: </string>
    <string name="home_year">Year: </string>
    <string name="home_semester">Semester: </string>
    <string name="home_subjectsenrolled">Subjects enrolled: </string>
    <string name="home_completion">SEMESTER COMPLETION</string>
    <string name="home_tardiness">YOUR VS AVERAGE TARDINESS</string>
    <string name="home_late">LATE</string>
    <string name="home_early">EARLY</string>
    <string name="home_intime">IN TIME</string>
    <string name="auth_hint">LDAP e-mail address</string>
    <string name="auth_hintpassword">Password</string>
    <string name="auth_rememberme">Remember Me</string>
    <string name="mybehaviours_studyimprovements">STUDY IMPROVEMENTS</string>
    <string name="attendance_semester">Semester:</string>
    <string name="attendance_semnum">1</string>
    <string name="attendance_subject">SUBJECT</string>
    <string name="attendance_attendance">MY ATTENDANCE</string>
    <string name="attendance_class">CLASS</string>
    <string name="attendance_myattend">MY ATTEND.</string>
    <string name="attendance_minattend">MIN ATTEND.</string>
    <string name="schedule_time">TIME</string>
    <string name="schedule_subject">SUBJECT</string>
    <string name="schedule_attendance">ATTENDANCE</string>
    <string name="statsgoals_myvsavg">MY VS AVG. PEER ATTENDANCE</string>
    <string name="statsgoals_subject">Subject:</string>
    <string name="auth_login">Login</string>
    <string name="auth_register">Register</string>
    <string name="auth_fullanme">Full name</string>
    <string name="auth_hint2">Username</string>
    <string name="auth_submit">Submit</string>
    <string name="settings_email">Email</string>
    <string name="settings_semester">Semester</string>
</resources>