<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/ambienceFragment"
        android:name="hr.foi.academiclifestyle.ui.ambience.AmbienceFragment"
        android:label="@string/nav_ambience"
        tools:layout="@layout/fragment_ambience" />
    <fragment
        android:id="@+id/myClassesFragment"
        android:name="hr.foi.academiclifestyle.ui.myclasses.MyClassesFragment"
        android:label="@string/nav_myclasses"
        tools:layout="@layout/fragment_myclasses" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="hr.foi.academiclifestyle.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/myBehavioursFragment"
        android:name="hr.foi.academiclifestyle.ui.mybehaviours.MyBehavioursFragment"
        android:label="@string/nav_mybehaviours"
        tools:layout="@layout/fragment_mybehaviours" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="hr.foi.academiclifestyle.ui.auth.LoginFragment"
        android:label="LoginFragment" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="hr.foi.academiclifestyle.ui.auth.RegisterFragment"
        android:label="RegisterFragment" />
    <fragment
        android:id="@+id/splashFragment"
        android:name="hr.foi.academiclifestyle.ui.auth.SplashFragment"
        android:label="SplashFragment" />
    <fragment
        android:id="@+id/fragmentSettings"
        android:name="hr.foi.academiclifestyle.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>