<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingsFragment"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/txtSettingsFirstName"
                android:layout_width="120dp"
                android:layout_height="wrap_content"

                android:text="@string/txtSettings_first_name"
                android:textColor="@color/grey_60"
                android:textSize="22sp"
                />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="auto"
                android:inputType="text"
                android:labelFor="@id/txtSettingsFirstName"
                android:textColor="@color/grey_60"
                android:textSize="20sp"
                android:theme="@style/MyEditTextStyle2" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/txtSettingsLastName"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@color/grey_60"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextTextPersonLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:labelFor="@id/txtSettingsLastName"
                android:textColor="@color/grey_60"
                android:textSize="20sp"
                android:theme="@style/MyEditTextStyle2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/txtSettingUsername"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/txtSettingsUsername"
                android:textColor="@color/grey_60"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextTextUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:labelFor="@id/txtSettingUsername"
                android:textColor="@color/grey_60"
                android:textSize="20sp"
                android:theme="@style/MyEditTextStyle2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/txtSettingsEmail"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_email"
                android:textColor="@color/grey_60"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextTextEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:editable="false"
                android:ems="10"
                android:enabled="false"
                android:labelFor="@id/txtSettingsEmail"
                android:textColor="@color/grey_60"
                android:textSize="20sp"
                android:theme="@style/MyEditTextStyle2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <TextView

                android:id="@+id/txtSettingsStudy"
                android:layout_width="120dp"
                android:layout_height="wrap_content"

                android:layout_gravity="center_vertical"
                android:text="@string/study"
                android:textColor="@color/grey_60"
                android:textSize="22sp" />


            <Spinner
                android:id="@+id/spinner"
                style="@style/MyEditTextStyle2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/spinner_bg"
                android:dropDownWidth="300dp"
                android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                android:paddingEnd="14dp"
                android:popupBackground="@android:color/white"
                android:popupElevation="3dp"
                android:stateListAnimator="@drawable/spinner_sla"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/txtSettingsSemester"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/settings_semester"
                android:textColor="@color/grey_60"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextSemester"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/grey_60"
                android:textSize="20sp"
                android:theme="@style/MyEditTextStyle2"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/txtSettingsYearOfStudy"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/year_of_study"
                android:textColor="@color/grey_60"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/editTextYearOfStudy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:labelFor="@id/txtSettingsYearOfStudy"
                android:textColor="@color/grey_60"
                android:textSize="20sp"
                android:theme="@style/MyEditTextStyle2"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <ImageView
                android:id="@+id/image_view"
                android:scaleType="centerCrop"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:visibility="gone"

                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            >

            <Button
                android:id="@+id/btnSettingsChooseImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/choose_image"
                android:textColor="@color/white_acc"
                android:textSize="18sp"

                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            >

            <Button
                android:id="@+id/btnSaveSettings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/saveSettings"
                android:textColor="@color/white_acc"
                android:textSize="18sp"

                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            >

            <Button
                android:id="@+id/btnSetDefaultImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/set_default_image"
                android:textColor="@color/white_acc"
                android:textSize="18sp"

                />
        </RelativeLayout>

    </LinearLayout>

    </ScrollView>


</layout>