<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_20"
            android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/white_acc"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/tardiness"
                android:textColor="@color/red_primary"
                android:textSize="22sp"
                 />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChartMyBehaviors"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginTop="15dp"
                android:paddingStart="0dp"
                android:layout_marginStart="0dp"
                android:background="@color/white_acc"

                />
        </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:background="@color/white_acc"
               >

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/description"
                   android:layout_marginStart="15dp"
                   android:textSize="17sp"
                   android:textColor="@color/grey_80"
                   android:layout_marginTop="10dp"
               />

               <LinearLayout
                   android:id="@+id/divider2"
                   android:layout_width="match_parent"
                   android:layout_height="3dp"
                   android:layout_marginTop="10dp"
                   android:layout_marginStart="15dp"
                   android:layout_marginEnd="15dp"
                   android:background="@color/red_primary"
                   android:orientation="vertical"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/txtAirDescriptionTitle" />

               <TextView
                   android:id="@+id/tardinessDescription"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="16sp"
                   android:layout_marginTop="5dp"
                   android:layout_marginStart="15dp"
                   android:layout_marginEnd="15dp"
                   android:text="@string/placeholder"
                    android:textColor="@color/grey_80"
                   />
           </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:background="@color/white_acc"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mybehaviours_studyimprovements"
                android:textColor="@color/red_primary"
                android:textSize="20sp"
                android:layout_marginStart="15dp"/>

            <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="200dp"


                />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginStart="15dp"
                android:textSize="17sp"
                android:textColor="@color/grey_80"
                android:layout_marginTop="10dp"
                />

            <LinearLayout
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/red_primary"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAirDescriptionTitle" />
            <TextView
                android:id="@+id/txtMyBehavioursStudyDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/grey_80"
                android:text="@string/descriptionStudyImprovments"

                />

        </LinearLayout>


</LinearLayout>
    </ScrollView>
</layout>